# sess

./: .env.example  .gitattributes  CONTRIBUTING.md  PDFparser.py  README.md  app.py  featureExtractorPDF.py  gradioQualityDimensionWrapper.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  MODULES.md
src/sess/: __init__.py  __main__.py  bootstrap.py  logging.py
src/sess/application/use_cases/: __init__.py  check_factuality.py  generate_slide_feedback.py  predict_views.py  process_slide_deck.py
src/sess/config/: settings.py
src/sess/domain/: __init__.py  constants.py  errors.py  models.py
src/sess/domain/services/: feature_extractor.py  pdf_rendering.py  quality_scoring.py
src/sess/infrastructure/clients/: factcheck_client.py  llama_parse_client.py  openai_client.py
src/sess/infrastructure/db/: sqlite_repo.py
src/sess/infrastructure/ml/: __init__.py  model_registry.py
src/sess/interfaces/: __init__.py  gradio_ui.py
src/sess/interfaces/renderers/: __init__.py  quality_dimension_renderer.py
tests/application/use_cases/: test_check_factuality.py
tests/config/: test_settings.py
tests/domain/services/: test_quality_scoring.py
tests/interfaces/renderers/: test_quality_dimension_renderer.py
